# omnilock-smt

./: .gitignore  Cargo.toml  README.md
src/: main.rs  smt.rs
