[package]
name = "omnilock-smt"
version = "0.1.0"
authors = ["mkxbl <vyclzn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree.git", rev = "2dce546"}
hex = "0.4.3"
lazy_static = "1.3.0"
ckb-hash = "0.100.0-rc2"
